<resources>
    <string name="app_name">Sonora</string>

    <string name="title_activity_splashscreen">Splashscreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Menu Strings -->
    <string name="sign_out">Sign Out</string>
    <string name="action_settings">Settings</string>

    <!-- Login Strings -->
    <string name="facebook_login">Facebook</string>
    <string name="google_login">Google</string>

    <!-- Error strings -->
    <string name="google_sign_in_error">Error signing in with Google</string>
    <string name="image_retrieval_error">Error retrieving image</string>

    <!-- Menus Fragment Strings -->
    <string name="featured_menus">Featured Menus</string>
    <string name="my_menus">My Menus</string>

    <!-- Profile Fragment Strings -->
    <string name="recipes">recipes</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="update_user_error">There was an error fetching recipes</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="close">CLOSE</string>

    <!-- Add Recipe Strings -->
    <string name="title_add_recipe_activity">Add Recipe</string>
    <string name="add_recipe_image">Add recipe image</string>
    <string name="recipe_name">Recipe name:</string>
    <string name="add_instruction">Add Instruction</string>
    <string name="add_tag">Add Tag</string>
    <string name="button_submit">Submit</string>
    <string name="error_instruction_info">Please add all instruction information</string>
    <string name="error_tag_info">Please add all tag information</string>
    <string name="error_recipe_info">Pleasee add all recipe information</string>
    <string-array name="count_types">
        <item>cup</item>
        <item>lb</item>
        <item>oz</item>
        <item>piece</item>
        <item>pint</item>
        <item>quart</item>
        <item>tbsp</item>
        <item>tsp</item>
    </string-array>
    <string-array name="recipe_components">
        <item>Add Ingredients</item>
        <item>Add Instructions</item>
        <item>Add Tags</item>
    </string-array>
    <string name="recipe_component_image_desc">component icon</string>
    <string name="add">Add</string>

    <!-- Add Ingredient Strings -->
    <string name="hint_name">Name</string>
    <string name="hint_count">Count</string>
    <string name="title_add_ingredients">Add Ingredients</string>
    <string name="error_ingredient_info">Please add all ingredient fields</string>
    <string name="error_ingredient_count_parse">Ingredient count not recognized</string>
</resources>
