<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sonora.android.AddIngredientsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:weightSum="10">

        <EditText
            android:id="@+id/et_ingredient_name"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:hint="@string/hint_name"/>

        <EditText
            android:id="@+id/et_ingredient_count"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:textAlignment="textEnd"
            android:hint="@string/hint_count"/>

        <Spinner
            android:id="@+id/sp_ingredient_ct_type"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_new_ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:text="@string/add"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_add_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
