<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/fullscreen_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.sonora.android.SplashscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:id="@+id/image_icon_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:animateLayoutChanges="true"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="6">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_almond" />

                </LinearLayout>

                <TextView
                    android:id="@+id/splash_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/dark_gray"
                    android:textSize="14pt"
                    android:visibility="invisible" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_content"
            android:layout_width="match_parent"
            android:background="?colorPrimary"
            android:layout_height="0dp"
            android:layout_weight="0">

            <View
                android:id="@+id/login_center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/facebook_login"
                style="@style/LoginButton"
                android:layout_above="@id/login_center"
                android:background="@color/com_facebook_blue"
                android:text="@string/facebook_login"
                android:layout_marginBottom="@dimen/double_standard_margin"/>

            <TextView
                android:id="@+id/google_login"
                style="@style/LoginButton"
                android:layout_below="@id/login_center"
                android:background="@color/dark_gray"
                android:text="@string/google_login"
                android:layout_marginTop="@dimen/double_standard_margin"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
